[gd_scene load_steps=20 format=3 uid="uid://dtwxewqf4dk3o"]

[ext_resource type="Script" uid="uid://d3nxwkt38ydyk" path="res://scripts/ship/ship_interior.gd" id="1_ship_interior"]
[ext_resource type="PackedScene" uid="uid://b8xn5q7y8vkxd" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="Script" uid="uid://bdgy0t5ocq1te" path="res://scripts/ship/exit_door.gd" id="3_exit_door"]
[ext_resource type="Script" uid="uid://dy37oj8jrq82n" path="res://scripts/ship/evidence_board.gd" id="4_evidence_board"]
[ext_resource type="Script" uid="uid://8h8ph1pj5m53" path="res://scripts/ship/forensics_station.gd" id="5_forensics"]
[ext_resource type="Script" uid="uid://k6oqr35lt5me" path="res://scripts/ship/computer_station.gd" id="6_computer"]
[ext_resource type="Script" uid="uid://kdywdu1a21yt" path="res://scripts/ship/case_file_station.gd" id="7_case_files"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.2, 0.2, 0.25, 1)
metallic = 0.8
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
material = SubResource("StandardMaterial3D_floor")
size = Vector3(10, 0.2, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(10, 0.2, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_walls"]
albedo_color = Color(0.3, 0.3, 0.35, 1)
metallic = 0.7
roughness = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_walls"]
material = SubResource("StandardMaterial3D_walls")
size = Vector3(0.2, 3, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_walls"]
size = Vector3(0.2, 3, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ceiling"]
albedo_color = Color(0.95, 0.95, 1, 1)
metallic = 0.5
roughness = 0.2
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_evidence_board"]
size = Vector3(1, 2, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_forensics_table"]
size = Vector3(2, 1, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_computer_desk"]
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_filing_cabinet"]
size = Vector3(0.8, 1.5, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_door"]
size = Vector3(1.4, 2.4, 0.2)

[node name="TheDeduction" type="Node3D"]
script = ExtResource("1_ship_interior")

[node name="Structure" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Structure"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/Floor"]
mesh = SubResource("BoxMesh_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="LeftWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/LeftWall"]
mesh = SubResource("BoxMesh_walls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/LeftWall"]
shape = SubResource("BoxShape3D_walls")

[node name="RightWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/RightWall"]
mesh = SubResource("BoxMesh_walls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/RightWall"]
shape = SubResource("BoxShape3D_walls")

[node name="Ceiling" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/Ceiling"]
material_override = SubResource("StandardMaterial3D_ceiling")
mesh = SubResource("BoxMesh_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/Ceiling"]
shape = SubResource("BoxShape3D_floor")

[node name="BackWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 7.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/BackWall"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 0)
mesh = SubResource("BoxMesh_walls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/BackWall"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 0)
shape = SubResource("BoxShape3D_walls")

[node name="FrontWall" type="Node3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -7.5)

[node name="WallCombiner" type="CSGCombiner3D" parent="Structure/FrontWall"]
use_collision = true

[node name="WallMain" type="CSGBox3D" parent="Structure/FrontWall/WallCombiner"]
material_override = SubResource("StandardMaterial3D_walls")
size = Vector3(10, 3, 0.2)

[node name="DoorCutout" type="CSGBox3D" parent="Structure/FrontWall/WallCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
operation = 2
size = Vector3(1.6, 2.5, 0.4)

[node name="Lighting" type="Node3D" parent="."]

[node name="MainLight" type="DirectionalLight3D" parent="Lighting"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
light_energy = 0.8
shadow_enabled = true

[node name="AmbientLight" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -3)
light_color = Color(0.7, 0.7, 0.8, 1)
light_energy = 0.5
omni_range = 20.0

[node name="WorkstationLight" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -3, 2.5, 3)
light_energy = 1.2

[node name="Stations" type="Node3D" parent="."]

[node name="EvidenceBoard" type="StaticBody3D" parent="Stations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 1.5, 0)
collision_layer = 2
script = ExtResource("4_evidence_board")

[node name="Board" type="CSGBox3D" parent="Stations/EvidenceBoard"]
material_override = SubResource("StandardMaterial3D_walls")
use_collision = true
size = Vector3(0.1, 2, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stations/EvidenceBoard"]
shape = SubResource("BoxShape3D_evidence_board")

[node name="StringConnections" type="Node3D" parent="Stations/EvidenceBoard"]

[node name="ForensicsStation" type="StaticBody3D" parent="Stations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, -3)
collision_layer = 2
script = ExtResource("5_forensics")

[node name="Table" type="CSGBox3D" parent="Stations/ForensicsStation"]
use_collision = true
size = Vector3(2, 1, 1.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stations/ForensicsStation"]
shape = SubResource("BoxShape3D_forensics_table")

[node name="Microscope" type="CSGCylinder3D" parent="Stations/ForensicsStation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
use_collision = true
radius = 0.15
height = 0.4

[node name="ComputerStation" type="StaticBody3D" parent="Stations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, 3)
collision_layer = 2
script = ExtResource("6_computer")

[node name="Desk" type="CSGBox3D" parent="Stations/ComputerStation"]
use_collision = true
size = Vector3(2, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stations/ComputerStation"]
shape = SubResource("BoxShape3D_computer_desk")

[node name="Monitor" type="CSGBox3D" parent="Stations/ComputerStation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
use_collision = true
size = Vector3(0.8, 0.5, 0.05)

[node name="CaseFileStation" type="StaticBody3D" parent="Stations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)
collision_layer = 2
script = ExtResource("7_case_files")

[node name="FilingCabinet" type="CSGBox3D" parent="Stations/CaseFileStation"]
use_collision = true
size = Vector3(0.8, 1.5, 0.6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stations/CaseFileStation"]
shape = SubResource("BoxShape3D_filing_cabinet")

[node name="Player" parent="." instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="ExitDoor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -7.4)
collision_layer = 2
script = ExtResource("3_exit_door")

[node name="DoorFrame" type="CSGBox3D" parent="ExitDoor"]
operation = 2
size = Vector3(1.5, 2.5, 0.3)

[node name="Door" type="CSGBox3D" parent="ExitDoor"]
material_override = SubResource("StandardMaterial3D_walls")
size = Vector3(1.4, 2.4, 0.2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitDoor"]
shape = SubResource("BoxShape3D_door")
